--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-router-dom": "^7.9.4",
     "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.4",
     "@google/genai": "^1.26.0",
     "lucide-react": "^0.546.0",
-    "framer-motion": "^11.2.10",
-    "react-dom": "^19.2.0"
+    "framer-motion": "^12.23.24"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
