--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "react": "^19.2.0",
-    "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.4",
     "@google/genai": "^1.26.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
-    "framer-motion": "^12.23.24"
+    "@supabase/supabase-js": "^2.45.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
